building the header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
+    <header>
+        <nav id="navbar">
+            <ul>
+                <li><a>About</a></li>
+                <li><a>Work</a></li>
+                <li><a>Contact</a></li>
+            </ul>
 
+        </nav>
+    </header>
 </body>
 
 </html>
