Starting to work on the welcome section!

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
         </nav>
     </header>
+    <div id="spacer"></div>
+    <div id="welcome-section">
+        <h1>Hey! I am Cameron</h1>
+        <p>a web developer</p>
+    </div>
 </body>
 
 </html>
