--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <h1>Hey! I am Cameron</h1>
         <p>a web developer</p>
     </div>
+    <div id="project-section">
+        <div id="heading">
+            <h2>These are some of my projects</h2>
+        </div>
+        <div id="projects">
+
+        </div>
+    </div>
 </body>
 
 </html>
