--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>
         <div id="projects">
 
+
+            <div class="project-tile"></div>
+
         </div>
     </div>
 </body>
