adding more content into the second section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <div class="project-tile"></div>
 
         </div>
+        <div id="button">
+            <button type="submit">Show all</button>
+        </div>
     </div>
 </body>
 
