second section format is coming together

--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
         <div id="projects">
 
 
-            <div class="project-tile"></div>
+            <div class="project-tile">
+                <img src="images/lenny.png" alt="">
+                <img src="images/lenny.png" alt="">
+                <img src="images/lenny.png" alt="">
+                <img src="images/lenny.png" alt="">
+                <img src="images/lenny.png" alt="">
+                <img src="images/lenny.png" alt="">
+            </div>
 
         </div>
         <div id="button">
