--- a/index.html
+++ b/index.html
@@ -33,12 +33,31 @@
 
 
             <div class="project-tile">
-                <img src="images/lenny.png" alt="">
-                <img src="images/lenny.png" alt="">
-                <img src="images/lenny.png" alt="">
-                <img src="images/lenny.png" alt="">
-                <img src="images/lenny.png" alt="">
-                <img src="images/lenny.png" alt="">
+                <div>
+                    <img src="images/lenny.png" alt="">
+                    <p>Snacks and cracks</p>
+                </div>
+                <div>
+                    <img src="images/lenny.png" alt="">
+                    <p>Snacks and cracks</p>
+                </div>
+                <div>
+                    <img src="images/lenny.png" alt="">
+                    <p>Snacks and cracks</p>
+                </div>
+                <div>
+                    <img src="images/lenny.png" alt="">
+                    <p>Snacks and cracks</p>
+                </div>
+                <div>
+                    <img src="images/lenny.png" alt="">
+                    <p>Snacks and cracks</p>
+                </div>
+                <div>
+                    <img src="images/lenny.png" alt="">
+                    <p>Snacks and cracks</p>
+                </div>
+
             </div>
 
         </div>
