added some more content to second section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <div class="project-tile">
                 <div>
                     <img src="images/lenny.png" alt="">
-                    <p>Snacks and cracks</p>
+
+                    <p><span>&#60;</span>Snacks and cracks <span>&#47;&#62;</span></p>
+
                 </div>
                 <div>
                     <img src="images/lenny.png" alt="">
