added images into the project section

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
                 </div>
                 <div>
-                    <img src="images/lenny.png" alt="">
+                    <img src="images/surveyimage.png" alt="">
                     <p>Snacks and cracks</p>
                 </div>
                 <div>
-                    <img src="images/lenny.png" alt="">
+                    <img class="landingpage" src="images/landing_page_image.png" alt="">
                     <p>Snacks and cracks</p>
                 </div>
                 <div>
