--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     <p>Snacks and cracks</p>
                 </div>
                 <div>
-                    <img src="images/lenny.png" alt="">
+                    <img src="images/Technical_website_image.png" alt="">
                     <p>Snacks and cracks</p>
                 </div>
                 <div>
-                    <img src="images/lenny.png" alt="">
+                    <img src="images/responsive-image-site.png" alt="">
                     <p>Snacks and cracks</p>
                 </div>
                 <div>
