6/6 images have been added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p>Snacks and cracks</p>
                 </div>
                 <div>
-                    <img src="images/lenny.png" alt="">
+                    <img src="images/typography_site.png" alt="">
                     <p>Snacks and cracks</p>
                 </div>
 
