changed the h1 tagline

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <div id="spacer"></div>
     <div id="welcome-section">
-        <h1>Hey! I am Cameron</h1>
+        <h1>Hey! I'm Cameron. </h1>
         <p>a web developer</p>
     </div>
     <div id="project-section">
