--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,6 +30,7 @@
     <div id="project-section">
         <div id="heading">
             <h2>These are some of my projects</h2>
+
         </div>
         <div id="projects">
 
@@ -36,7 +39,7 @@
                 <div>
                     <img src="images/lenny.png" alt="">
 
-                    <p><span>&#60;</span>Snacks and cracks <span>&#47;&#62;</span></p>
+                    <p><span>&#60; </span>Snacks and cracks <span>&#47;&#62; </span></p>
 
                 </div>
                 <div>
