trying to figure out this transition thing

--- a/index.html
+++ b/index.html
@@ -40,35 +40,35 @@
                 <div>
                     <img src="images/lenny.png" alt="">
 
-                    <p><span>&#60; </span>Snacks and cracks <span>&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
 
                 </div>
                 <div>
                     <img src="images/surveyimage.png" alt="">
-                    <p>Snacks and cracks</p>
+                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
                 <div>
                     <img class="landingpage" src="images/landing_page_image.png" alt="">
-                    <p>Snacks and cracks</p>
+                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
                 <div>
                     <img src="images/Technical_website_image.png" alt="">
-                    <p>Snacks and cracks</p>
+                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
                 <div>
                     <img src="images/responsive-image-site.png" alt="">
-                    <p>Snacks and cracks</p>
+                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
                 <div>
                     <img src="images/typography_site.png" alt="">
-                    <p>Snacks and cracks</p>
+                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
 
             </div>
 
         </div>
         <div id="button">
-            <button type="submit">Show all</button>
+            <button type="submit">Show all<span> &#8250;</span></button>
         </div>
     </div>
 </body>
