kind of made the transition effect work

--- a/index.html
+++ b/index.html
@@ -37,29 +37,31 @@
 
 
             <div class="project-tile">
-                <div>
+                <div class="cat">
                     <img src="images/lenny.png" alt="">
 
                     <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
 
                 </div>
-                <div>
+                <div class="cat">
                     <img src="images/surveyimage.png" alt="">
                     <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
-                <div>
+                <div class="cat">
+
                     <img class="landingpage" src="images/landing_page_image.png" alt="">
                     <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
-                <div>
+                <div class="cat">
+
                     <img src="images/Technical_website_image.png" alt="">
                     <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
-                <div>
+                <div class="cat">
                     <img src="images/responsive-image-site.png" alt="">
                     <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
-                <div>
+                <div class="cat">
                     <img src="images/typography_site.png" alt="">
                     <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
                 </div>
