adding in the page names and

--- a/index.html
+++ b/index.html
@@ -40,30 +40,30 @@
                 <div class="cat">
                     <img src="images/lenny.png" alt="">
 
-                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span> Tribute Page <span class="code">&#47;&#62; </span></p>
 
                 </div>
                 <div class="cat">
                     <img src="images/surveyimage.png" alt="">
-                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span>Survey Form <span class="code">&#47;&#62; </span></p>
                 </div>
                 <div class="cat">
 
                     <img class="landingpage" src="images/landing_page_image.png" alt="">
-                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span>Trombone Store Page<span class="code">&#47;&#62; </span></p>
                 </div>
                 <div class="cat">
 
                     <img src="images/Technical_website_image.png" alt="">
-                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span>Technical Website<span class="code">&#47;&#62; </span></p>
                 </div>
                 <div class="cat">
                     <img src="images/responsive-image-site.png" alt="">
-                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span>Responsive Image Site<span class="code">&#47;&#62; </span></p>
                 </div>
                 <div class="cat">
                     <img src="images/typography_site.png" alt="">
-                    <p><span class="code">&#60; </span>Snacks and cracks <span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span>Typography Site<span class="code">&#47;&#62; </span></p>
                 </div>
 
             </div>
