animated the button!

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         </div>
         <div id="button">
-            <button type="submit">Show all<span> &#8250;</span></button>
+            <button type="submit">Show all<span class="arrow"> &#8250;</span></button>
         </div>
     </div>
 </body>
