making some more progress, hoping to finish soon

--- a/index.html
+++ b/index.html
@@ -73,7 +73,20 @@
             <button type="submit">Show all<span class="arrow"> &#8250;</span></button>
         </div>
     </div>
+    <footer>
+        <div id="footer-header">
+            <h2>Let's work together...</h2>
+            <p>How do you like your eggs?</p>
+        </div>
+        <div id='bottom-links'>
+            <ul>
+                <li class=""><a href="">GitHub</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Send an email</a></li>
 
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
