--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
         <nav id="navbar">
             <ul>
-                <li><a>About</a></li>
-                <li><a>Work</a></li>
-                <li><a>Contact</a></li>
+                <li class="uppernav"><a>About</a></li>
+                <li class="uppernav"><a>Work</a></li>
+                <li class="uppernav"><a>Contact</a></li>
             </ul>
 
         </nav>
@@ -80,7 +80,7 @@
         </div>
         <div id='bottom-links'>
             <ul>
-                <li class=""><a href="">GitHub</a></li>
+                <li><a href="">GitHub</a></li>
                 <li><a href="">Twitter</a></li>
                 <li><a href="">Send an email</a></li>
 
