--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -81,9 +80,9 @@
         </div>
         <div id='bottom-links'>
             <ul>
-                <li><a href=""><i class="fa fa-github" style="font-size:24px"></i>GitHub</a></li>
-                <li><a href=""> <i class="fa fa-twitter" style="font-size:24px"></i> Twitter</a></li>
-                <li><a href="">&#9993; Send an email</a></li>
+                <li><a href="">GitHub</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Send an email</a></li>
 
             </ul>
         </div>
