--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
             <ul>
                 <li><a href=""><i class="fa fa-github" style="font-size:24px"></i> GitHub</a></li>
                 <li><a href=""><i class="fa fa-twitter" style="font-size:24px"></i> Twitter</a></li>
-                <li><a href="">&#9993; Send an email</a></li>
+                <li><a href="">&#9993; Email!
+                    </a></li>
 
             </ul>
         </div>
