--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav id="navbar">
             <ul>
                 <li class="uppernav"><a>About</a></li>
-                <li class="uppernav"><a>Work</a></li>
+                <li class="uppernav"><a href="#projects">Work</a></li>
                 <li class="uppernav"><a>Contact</a></li>
             </ul>
 
