--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li class="uppernav"><a>About</a></li>
                 <li class="uppernav"><a href="#projects">Work</a></li>
-                <li class="uppernav"><a>Contact</a></li>
+                <li class="uppernav"><a href=#bottom-links>Contact</a></li>
             </ul>
 
         </nav>
