--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav id="navbar">
             <ul>
-                <li class="uppernav"><a>About</a></li>
+                <li class="uppernav"><a href='#welcome-section'>About</a></li>
                 <li class="uppernav"><a href="#projects">Work</a></li>
                 <li class="uppernav"><a href=#bottom-links>Contact</a></li>
             </ul>
@@ -41,22 +41,26 @@
                 <div class="cat">
                     <img src="images/lenny.png" alt="">
 
-                    <p><span class="code">&#60; </span> Tribute Page <span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span> <a href="https://camercha.github.io/tribute_page/">Tribute
+                            Page</a> <span class="code">&#47;&#62; </span></p>
 
                 </div>
                 <div class="cat">
                     <img src="images/surveyimage.png" alt="">
-                    <p><span class="code">&#60; </span>Survey Form <span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span> <a href="">Survey Form</a> <span class="code">&#47;&#62; </span>
+                    </p>
                 </div>
                 <div class="cat">
 
                     <img class="landingpage" src="images/landing_page_image.png" alt="">
-                    <p><span class="code">&#60; </span>Trombone Store Page<span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span><a href="https://camercha.github.io/landing_page/">Trombone Store
+                            Page</a><span class="code">&#47;&#62; </span></p>
                 </div>
                 <div class="cat">
 
                     <img src="images/Technical_website_image.png" alt="">
-                    <p><span class="code">&#60; </span>Technical Website<span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span><a href="">Technical Website</a><span class="code">&#47;&#62;
+                        </span></p>
                 </div>
                 <div class="cat">
                     <img src="images/responsive-image-site.png" alt="">
