--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                 <div class="cat">
 
                     <img src="images/Technical_website_image.png" alt="">
-                    <p><span class="code">&#60; </span><a href="">Technical Website</a><span class="code">&#47;&#62;
+                    <p><span class="code">&#60; </span><a href="https://camercha.github.io/technical_website/">Technical
+                            Website</a><span class="code">&#47;&#62;
                         </span></p>
                 </div>
                 <div class="cat">
