--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 </div>
                 <div class="cat">
                     <img src="images/responsive-image-site.png" alt="">
-                    <p><span class="code">&#60; </span>Responsive Image Site<span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span><a href="">Responsive Image Site</a><span class="code">&#47;&#62;
+                        </span></p>
                 </div>
                 <div class="cat">
                     <img src="images/typography_site.png" alt="">
