--- a/index.html
+++ b/index.html
@@ -66,12 +66,15 @@
                 </div>
                 <div class="cat">
                     <img src="images/responsive-image-site.png" alt="">
-                    <p><span class="code">&#60; </span><a href="">Responsive Image Site</a><span class="code">&#47;&#62;
+                    <p><span class="code">&#60; </span><a
+                            href="https://camercha.github.io/treehouse-project-5/">Responsive Image Site</a><span
+                            class="code">&#47;&#62;
                         </span></p>
                 </div>
                 <div class="cat">
                     <img src="images/typography_site.png" alt="">
-                    <p><span class="code">&#60; </span>Typography Site<span class="code">&#47;&#62; </span></p>
+                    <p><span class="code">&#60; </span><a href="">Typography Site</a><span class="code">&#47;&#62;
+                        </span></p>
                 </div>
 
             </div>
