--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 </div>
                 <div class="cat">
                     <img src="images/typography_site.png" alt="">
-                    <p><span class="code">&#60; </span><a href="">Typography Site</a><span class="code">&#47;&#62;
+                    <p><span class="code">&#60; </span><a
+                            href="https://camercha.github.io/treehouse-project-4/">Typography Site</a><span
+                            class="code">&#47;&#62;
                         </span></p>
                 </div>
 
@@ -91,7 +93,8 @@
         </div>
         <div id='bottom-links'>
             <ul>
-                <li><a href=""><i class="fa fa-github" style="font-size:24px"></i> GitHub</a></li>
+                <li><a href="https://github.com/camercha"><i class="fa fa-github" style="font-size:24px"></i> GitHub</a>
+                </li>
                 <li><a href=""><i class="fa fa-twitter" style="font-size:24px"></i> Twitter</a></li>
                 <li><a href="">&#9993; Email!
                     </a></li>
