--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
             <ul>
                 <li><a href="https://github.com/camercha"><i class="fa fa-github" style="font-size:24px"></i> GitHub</a>
                 </li>
-                <li><a href=""><i class="fa fa-twitter" style="font-size:24px"></i> Twitter</a></li>
+                <li><a href="https://twitter.com/Codecam4"><i class="fa fa-twitter" style="font-size:24px"></i>
+                        Twitter</a></li>
                 <li><a href="">&#9993; Email!
                     </a></li>
 
