--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </li>
                 <li><a href="https://twitter.com/Codecam4"><i class="fa fa-twitter" style="font-size:24px"></i>
                         Twitter</a></li>
-                <li><a href="">&#9993; Email!
+                <li><a href="mailto:cameronchandler110@gmail.com">&#9993; Email!
                     </a></li>
 
             </ul>
