--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             </div>
 
         </div>
-        <div id="button">
+        <!-- <div id="button">
             <button type="submit">Show all<span class="arrow"> &#8250;</span></button>
-        </div>
+        </div> -->
     </div>
     <footer>
         <div id="footer-header">
