--- a/index.html
+++ b/index.html
@@ -41,41 +41,43 @@
                 <div class="cat">
                     <img src="images/lenny.png" alt="">
 
-                    <p><span class="code">&#60; </span> <a href="https://camercha.github.io/tribute_page/">Tribute
+                    <p><span class="code">&#60; </span> <a href="https://camercha.github.io/tribute_page/"
+                            target="_blank">Tribute
                             Page</a> <span class="code">&#47;&#62; </span></p>
 
                 </div>
                 <div class="cat">
                     <img src="images/surveyimage.png" alt="">
-                    <p><span class="code">&#60; </span> <a href="https://camercha.github.io/survey_page/">Survey
+                    <p><span class="code">&#60; </span> <a href="https://camercha.github.io/survey_page/"
+                            target="_blank">Survey
                             Form</a> <span class="code">&#47;&#62; </span>
                     </p>
                 </div>
                 <div class="cat">
 
                     <img class="landingpage" src="images/landing_page_image.png" alt="">
-                    <p><span class="code">&#60; </span><a href="https://camercha.github.io/landing_page/">Trombone Store
+                    <p><span class="code">&#60; </span><a href="https://camercha.github.io/landing_page/"
+                            target="_blank">Trombone Store
                             Page</a><span class="code">&#47;&#62; </span></p>
                 </div>
                 <div class="cat">
 
                     <img src="images/Technical_website_image.png" alt="">
-                    <p><span class="code">&#60; </span><a href="https://camercha.github.io/technical_website/">Technical
+                    <p><span class="code">&#60; </span><a href="https://camercha.github.io/technical_website/"
+                            target="_blank">Technical
                             Website</a><span class="code">&#47;&#62;
                         </span></p>
                 </div>
                 <div class="cat">
                     <img src="images/responsive-image-site.png" alt="">
-                    <p><span class="code">&#60; </span><a
-                            href="https://camercha.github.io/treehouse-project-5/">Responsive Image Site</a><span
-                            class="code">&#47;&#62;
+                    <p><span class="code">&#60; </span><a href="https://camercha.github.io/treehouse-project-5/"
+                            target="_blank">Responsive Image Site</a><span class="code">&#47;&#62;
                         </span></p>
                 </div>
                 <div class="cat">
                     <img src="images/typography_site.png" alt="">
-                    <p><span class="code">&#60; </span><a
-                            href="https://camercha.github.io/treehouse-project-4/">Typography Site</a><span
-                            class="code">&#47;&#62;
+                    <p><span class="code">&#60; </span><a href="https://camercha.github.io/treehouse-project-4/"
+                            target="_blank">Typography Site</a><span class="code">&#47;&#62;
                         </span></p>
                 </div>
 
