--- a/index.html
+++ b/index.html
@@ -95,11 +95,13 @@
         </div>
         <div id='bottom-links'>
             <ul>
-                <li><a href="https://github.com/camercha"><i class="fa fa-github" style="font-size:24px"></i> GitHub</a>
+                <li><a href="https://github.com/camercha" target="_blank"><i class="fa fa-github"
+                            style="font-size:24px"></i> GitHub</a>
                 </li>
-                <li><a href="https://twitter.com/Codecam4"><i class="fa fa-twitter" style="font-size:24px"></i>
+                <li><a href="https://twitter.com/Codecam4" target="_blank"><i class="fa fa-twitter"
+                            style="font-size:24px"></i>
                         Twitter</a></li>
-                <li><a href="mailto:cameronchandler110@gmail.com">&#9993; Email!
+                <li><a href="mailto:cameronchandler110@gmail.com" target="_blank">&#9993; Email!
                     </a></li>
 
             </ul>
