--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="project-tile">
                 <div class="cat">
-                    <img src="images/lenny.png" alt="">
+                    <img src="images/lenny.png" alt="Image of a Tribute website">
 
                     <p><span class="code">&#60; </span> <a href="https://camercha.github.io/tribute_page/"
                             target="_blank">Tribute
@@ -47,7 +47,7 @@
 
                 </div>
                 <div class="cat">
-                    <img src="images/surveyimage.png" alt="">
+                    <img src="images/surveyimage.png" alt="Image of a survey website">
                     <p><span class="code">&#60; </span> <a href="https://camercha.github.io/survey_page/"
                             target="_blank">Survey
                             Form</a> <span class="code">&#47;&#62; </span>
@@ -55,27 +55,27 @@
                 </div>
                 <div class="cat">
 
-                    <img class="landingpage" src="images/landing_page_image.png" alt="">
+                    <img class="landingpage" src="images/landing_page_image.png" alt="Image of a trombone website">
                     <p><span class="code">&#60; </span><a href="https://camercha.github.io/landing_page/"
                             target="_blank">Trombone Store
                             Page</a><span class="code">&#47;&#62; </span></p>
                 </div>
                 <div class="cat">
 
-                    <img src="images/Technical_website_image.png" alt="">
+                    <img src="images/Technical_website_image.png" alt="Image of a Javascript learning website">
                     <p><span class="code">&#60; </span><a href="https://camercha.github.io/technical_website/"
                             target="_blank">Technical
                             Website</a><span class="code">&#47;&#62;
                         </span></p>
                 </div>
                 <div class="cat">
-                    <img src="images/responsive-image-site.png" alt="">
+                    <img src="images/responsive-image-site.png" alt="An image of a responsive website picture">
                     <p><span class="code">&#60; </span><a href="https://camercha.github.io/treehouse-project-5/"
                             target="_blank">Responsive Image Site</a><span class="code">&#47;&#62;
                         </span></p>
                 </div>
                 <div class="cat">
-                    <img src="images/typography_site.png" alt="">
+                    <img src="images/typography_site.png" alt="An image of a typography site">
                     <p><span class="code">&#60; </span><a href="https://camercha.github.io/treehouse-project-4/"
                             target="_blank">Typography Site</a><span class="code">&#47;&#62;
                         </span></p>
